# StressSystem

./: .gitignore  CMakeLists.txt  README.md  testing_solution.cpp
StressTesting/: checker.cpp  generator.cpp  launcher.cpp  randobjects.hpp  solution.cpp
StressTesting/Tests/: readme.txt
StressTesting/Tests/Test_1/Output/: RightSolution.txt  TestingSolution.txt
StressTesting/Tests/Test_10/Output/: TestingSolution.txt
StressTesting/Tests/Test_11/Output/: TestingSolution.txt
StressTesting/Tests/Test_12/Output/: RightSolution.txt
StressTesting/Tests/Test_13/Output/: RightSolution.txt
StressTesting/Tests/Test_14/: Report.txt
StressTesting/Tests/Test_14/Output/: RightSolution.txt  TestingSolution.txt
StressTesting/Tests/Test_2/Output/: TestingSolution.txt
StressTesting/Tests/Test_3/Output/: RightSolution.txt
StressTesting/Tests/Test_4/Output/: RightSolution.txt  TestingSolution.txt
StressTesting/Tests/Test_5/Output/: RightSolution.txt  TestingSolution.txt
StressTesting/Tests/Test_6/Output/: RightSolution.txt
StressTesting/Tests/Test_7/: Report.txt
StressTesting/Tests/Test_7/Output/: RightSolution.txt  TestingSolution.txt
StressTesting/Tests/Test_8/Output/: TestingSolution.txt
StressTesting/Tests/Test_9/Output/: RightSolution.txt
